devops-lab/gitops/python-api/ingress.yaml
# nip.io resuelve cualquier <algo>.<IP>.nip.io a esa IP (DNS sin configurar nada)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-api
spec:
  ingressClassName: traefik   # Ingress Controller que trae k3s por defecto
  rules:
    - host: python.161.97.146.175.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-api
                port:
                  name: http
